# schoology-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: print_groups.rs
src/: client.rs  lib.rs  realms.rs  tests.rs
src/types/: mod.rs
tests/: common.rs  group_test.rs  school_test.rs  updates_test.rs  user_test.rs
tests/example_json/: sample_group_list.json  sample_update_list.json  sample_users_list.json
